--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ subprojects {
         implementation 'javax.annotation:javax.annotation-api:1.3.2'
         // https://mvnrepository.com/artifact/log4j/log4j
         implementation 'log4j:log4j:1.2.17'
+        // https://mvnrepository.com/artifact/org.springframework/spring-aop
+        implementation "org.springframework:spring-aop:$springVersion"
+        //https://mvnrepository.com/artifact/org.aspectj/aspectjweaver
+        implementation 'org.aspectj:aspectjweaver:1.9.19'
 
         implementation "org.springframework:spring-context:$springVersion"
 
